--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>바코드 생성기</title>
+  <title>모바일 사원인증</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
   <style>
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <h2>바코드 생성기</h2>
+  <h2>모바일 사원인증 바코드</h2>
   <p id="barcode-value"></p>
   <svg id="barcode"></svg>
 
